# SgvCrypto

./: CMakeLists.txt  drm.qrc  main.cpp  sgvcrypto.cpp  sgvcrypto.h  sgvcrypto.ui
drm/: drm_file.xml
